--- a/src/MauiTemplatesCLI/release-notes.txt
+++ b/src/MauiTemplatesCLI/release-notes.txt
@@ -16,11 +16,11 @@ Output: OrderView.cs
 
 And it is named as: maui-item and maui-item-cs
 
-Both needs one required parameter, -b / --base, the base type.
+Both need one required parameter, -b / --base, the base type.
 
-And optionally takes another parameter, -g / --generic, to specify the generic base type.
+Optionally takes another parameter, -g / --generic, to specify the generic base type.
 
-In addition, XAML template takes one more parameter, -xo / --xaml-only, when defined, generates only XAML definition.
+In addition, the XAML template takes one more parameter, -xo / --xaml-only, when defined, generates only XAML definition.
 
 Note: Namespace resolution in both XAML and C# file is left to the user as deriving them with the template is outside its scope.
 
