--- a/src/MauiTemplatesCLI/release-notes.txt
+++ b/src/MauiTemplatesCLI/release-notes.txt
@@ -1,7 +1,13 @@
 Join me on Developer Thoughts (https://egvijayanand.in/), an exclusive blog for articles on Xamarin.Forms, .NET MAUI and Blazor.
 
-What's new in ver. 5.1.0:
+What's new in ver. 5.2.0:
 -------------------------
+Templates updated to support the latest .NET MAUI service release.
+
+The .NET MAUI Community Toolkit package version bumped to reference the latest release.
+
+v5.1.0:
+
 Templates updated for latest .NET MAUI release.
 
 The MauiVersion property is updated to dynamically refer to the latest available service release (8.*).
