Abstracts the Shared components as a separate .NET MAUI Class Library #206

--- a/src/MauiTemplatesCLI/release-notes.txt
+++ b/src/MauiTemplatesCLI/release-notes.txt
@@ -1,7 +1,17 @@
 Join me on Developer Thoughts (https://egvijayanand.in/), an exclusive blog for articles on Xamarin.Forms, .NET MAUI and Blazor.
 
-What's new in ver. 5.4.0:
+What's new in ver. 5.5.0:
 -------------------------
+* Introduced an option to abstract the Shared components as a separate .NET MAUI Class Library
+
+* This will create a solution structure that is akin to Xamarin.Forms
+
+-mcl | --maui-class-library - Default value is false
+
+dotnet new mauiapp -o MyApp -mcl
+
+v5.4.0:
+
 Templates updated to support .NET MAUI 9 Preview 4 release (9.0.0-preview.4.10690).
 
 Added Apple's Privacy Manifest file to facilitate submitting iOS app to the store.
