--- a/src/Extensions/MauiTemplates/MauiTemplates/release-notes.txt
+++ b/src/Extensions/MauiTemplates/MauiTemplates/release-notes.txt
@@ -1,7 +1,13 @@
 Join me on Developer Thoughts (https://egvijayanand.in/), an exclusive blog for articles on Xamarin.Forms, .NET MAUI and Blazor.
 
-What's new in ver. 5.4.0.0:
+What's new in ver. 5.5.0.0:
 ---------------------------
+1. Introduced an option to abstract the Shared components as a separate .NET MAUI Class Library
+
+2. This will create a solution structure that is akin to Xamarin.Forms (the only difference is that there won't be multiple head projects)
+
+v5.4.0.0:
+
 1. Templates updated to support .NET MAUI 9 Preview 4 release (9.0.0-preview.4.10690)
 
 2. Added Apple's Privacy Manifest file to facilitate submitting iOS app to the App Store.
