--- a/src/MauiTemplatesCLI/release-notes.txt
+++ b/src/MauiTemplatesCLI/release-notes.txt
@@ -1,10 +1,22 @@
 Join me on Developer Thoughts (https://egvijayanand.in/), an exclusive blog for articles on Xamarin.Forms, .NET MAUI and Blazor.
 
-What's new in ver. 5.5.0:
+What's new in ver. 5.6.0:
 -------------------------
-* Introduced an option to abstract the Shared components as a separate .NET MAUI Class Library
+Introduced using the NuGet CPM feature from within Visual Studio IDE.
 
-* This will create a solution structure that is akin to Xamarin.Forms
+Automated the process of using MAUI Nightly builds without any need for manual configuration with a local NuGet.config file.
+
+Just opt in for Nightly build and you're ready to go.
+
+While using the mcl option, Directory.Packages.props file would get listed as a solution item to update the MauiVersion property, if necessary.
+
+Templates updated for .NET 9 Preview 5.
+
+v5.5.0:
+
+Introduced an option to abstract the Shared components as a separate .NET MAUI Class Library
+
+This will create a solution structure that is akin to Xamarin.Forms (the only difference is that there won't be multiple head projects)
 
 -mcl | --maui-class-library - Default value is false
 
