--- a/src/Extensions/MauiTemplates/MauiTemplates/release-notes.txt
+++ b/src/Extensions/MauiTemplates/MauiTemplates/release-notes.txt
@@ -1,7 +1,19 @@
 Join me on Developer Thoughts (https://egvijayanand.in/), an exclusive blog for articles on Xamarin.Forms, .NET MAUI and Blazor.
 
-What's new in ver. 5.5.0.0:
+What's new in ver. 5.6.0.0:
 ---------------------------
+1. Introduced using the NuGet CPM feature from within Visual Studio IDE
+
+2. Automated the process of using MAUI Nightly builds without any need for manual configuration with a local NuGet.config file
+
+Just opt in for Nightly build and you're ready to go
+
+3. While abstracting Shared components, Directory.Packages.props file would get listed as a solution item to update the MauiVersion property, if necessary
+
+4. Templates updated for .NET 9 Preview 5
+
+v5.5.0.0:
+
 1. Introduced an option to abstract the Shared components as a separate .NET MAUI Class Library
 
 2. This will create a solution structure that is akin to Xamarin.Forms (the only difference is that there won't be multiple head projects)
