--- a/src/MauiTemplatesCLI/release-notes.txt
+++ b/src/MauiTemplatesCLI/release-notes.txt
@@ -1,7 +1,11 @@
 Join me on Developer Thoughts (https://egvijayanand.in/), an exclusive blog for articles on Xamarin.Forms, .NET MAUI and Blazor.
 
-What's new in ver. 5.6.0:
+What's new in ver. 5.6.1:
 -------------------------
+Templates updated to support .NET MAUI 8 SR6 release (v8.0.60).
+
+v5.6.0:
+
 Introduced using the NuGet CPM feature from within Visual Studio IDE.
 
 Automated the process of using MAUI Nightly builds without any need for manual configuration with a local NuGet.config file.
