--- a/src/Extensions/MauiTemplates/MauiTemplates/release-notes.txt
+++ b/src/Extensions/MauiTemplates/MauiTemplates/release-notes.txt
@@ -1,7 +1,15 @@
 Join me on Developer Thoughts (https://egvijayanand.in/), an exclusive blog for articles on Xamarin.Forms, .NET MAUI and Blazor.
 
-What's new in ver. 5.6.0.0:
+What's new in ver. 5.6.2.0:
 ---------------------------
+1. Templates updated to support .NET MAUI 8 SR6 release (v8.0.60).
+
+2. When not using the NuGet CPM feature, defined the value for the MauiVersion property as a floating version.
+
+This is done only for the .NET 8 Stable channel.
+
+v5.6.0.0:
+
 1. Introduced using the NuGet CPM feature from within Visual Studio IDE
 
 2. Automated the process of using MAUI Nightly builds without any need for manual configuration with a local NuGet.config file
