--- a/src/Extensions/MauiTemplates/MauiTemplates/release-notes.txt
+++ b/src/Extensions/MauiTemplates/MauiTemplates/release-notes.txt
@@ -1,7 +1,15 @@
 Join me on Developer Thoughts (https://egvijayanand.in/), an exclusive blog for articles on Xamarin.Forms, .NET MAUI and Blazor.
 
-What's new in ver. 5.6.2.0:
+What's new in ver. 5.7.0.0:
 ---------------------------
+1. Introduced an option to add the Maps package in both MAUI and Shared Class Library project templates.
+
+2. Added Apple's Privacy Manifest file to facilitate submitting macOS app (MacCatalyst) to the App Store.
+
+3. Little housekeeping to make the templates even more reliable.
+
+v5.6.2.0:
+
 1. Templates updated to support .NET MAUI 8 SR6 release (v8.0.60).
 
 2. When not using the NuGet CPM feature, defined the value for the MauiVersion property as a floating version.
