--- a/src/MauiTemplatesCLI/release-notes.txt
+++ b/src/MauiTemplatesCLI/release-notes.txt
@@ -4,7 +4,7 @@ This template package does not gather any usage or telemetry data, even anonymou
 
 What's new in ver. 5.9.0:
 -------------------------
-Templates updated for .NET 9 Preview 6 (v9.0.0-preview.6.24327.7) and .NET MAUI 8 SR7 release (v8.0.70).
+Templates updated for .NET MAUI 9 Preview 6 (v9.0.0-preview.6.24327.7) and .NET MAUI 8 SR7 release (v8.0.70).
 
 v5.8.0:
 
