VS Extension support for VS2022 ARM64 installations #253

--- a/src/Extensions/MauiTemplates/MauiTemplates/release-notes.txt
+++ b/src/Extensions/MauiTemplates/MauiTemplates/release-notes.txt
@@ -2,8 +2,14 @@ Join me on Developer Thoughts (https://egvijayanand.in/), an exclusive blog for 
 
 This VS extension does not gather any usage or telemetry data, even anonymously, ensuring that you can use it freely and with complete privacy assurance.
 
-What's new in ver. 5.11.0.0:
+What's new in ver. 5.12.0.0:
 ----------------------------
+1. The All-in-One .NET MAUI Templates Pack VS extension is now supported on both x64 and ARM64 installations of Visual Studio 2022. Happy coding!
+
+Consequently, the minimum supported version of Visual Studio 2022 will be v17.6 or higher.
+
+v5.11.0.0:
+
 1. Introduced an option to support the XML-based solution file (slnx) format.
 
 This would be an explicit option since the SLNX feature is currently in the preview stage and is only supported on VS2022.
