Templates updated for .NET MAUI 9 Preview 7 #255

--- a/src/MauiTemplatesCLI/release-notes.txt
+++ b/src/MauiTemplatesCLI/release-notes.txt
@@ -2,8 +2,14 @@ Join me on Developer Thoughts (https://egvijayanand.in/), an exclusive blog for 
 
 This template package does not gather any usage or telemetry data, even anonymously, ensuring that you can use it freely and with complete privacy assurance.
 
-What's new in ver. 5.11.0:
+What's new in ver. 5.12.0:
 --------------------------
+Templates updated to support .NET MAUI 9 Preview 7 release (v9.0.0-preview.7.24407.4).
+
+With the MainPage property of the Application made obsolete from this release, the corresponding changes have been implemented in the CreateWindow override method.
+
+v5.11.0:
+
 1. Introduced an option to support the XML-based solution file (slnx) format.
 
 This would be an explicit option since the SLNX feature is currently in the preview stage and is only supported on VS2022.
