--- a/src/MauiTemplatesCLI/release-notes.txt
+++ b/src/MauiTemplatesCLI/release-notes.txt
@@ -2,8 +2,14 @@ Join me on Developer Thoughts (https://egvijayanand.in/), an exclusive blog for 
 
 This template package does not gather any usage or telemetry data, even anonymously, ensuring that you can use it freely and with complete privacy assurance.
 
-What's new in ver. 5.12.1:
+What's new in ver. 5.13.0:
 --------------------------
+Templates updated to support .NET MAUI 9 RC1 release (v9.0.0-rc.1.24453.9).
+
+The WindowsSdkPackageVersion property has been temporarily included to make use of the latest version of the MVVM toolkit.
+
+v5.12.1:
+
 Android targetSdkVersion bumped to v35 for App projects targeting .NET 9
 
 v5.12.0:
