--- a/src/Extensions/MauiTemplates/MauiTemplates/release-notes.txt
+++ b/src/Extensions/MauiTemplates/MauiTemplates/release-notes.txt
@@ -2,8 +2,14 @@ Join me on Developer Thoughts (https://egvijayanand.in/), an exclusive blog for 
 
 This VS extension does not gather any usage or telemetry data, even anonymously, ensuring that you can use it freely and with complete privacy assurance.
 
-What's new in ver. 5.15.0.0:
+What's new in ver. 5.16.0.0:
 ----------------------------
+Introduced the option to add and configure the Syncfusion.Maui.Toolkit NuGet package.
+
+Note: This would be an explicit option.
+
+v5.15.0.0:
+
 Templates updated for .NET MAUI 9 RC1 (v9.0.0-rc.2.24503.2).
 
 v5.14.0.0:
