--- a/src/MauiTemplatesCLI/release-notes.txt
+++ b/src/MauiTemplatesCLI/release-notes.txt
@@ -2,8 +2,34 @@ Join me on Developer Thoughts (https://egvijayanand.in/), an exclusive blog for 
 
 This template package does not gather any usage or telemetry data, even anonymously, ensuring that you can use it freely and with complete privacy assurance.
 
-What's new in ver. 5.15.0:
---------------------------
+What's new in ver. 6.0.0:
+-------------------------
+Templates updated to support .NET MAUI 9 Stable channel release.
+
+The default value for the Framework parameter is now set to net9.0
+
+So by default, the project command generates a .NET MAUI 9 project.
+
+dotnet new mauiapp -o MyApp
+
+To create a .NET MAUI 8 project, explicitly pass the Framework parameter value.
+
+dotnet new mauiapp -o MyApp -f net8.0
+
+Added support for Dynamic NuGet package versioning for .NET MAUI 9 (similar to that in .NET MAUI 8)
+
+Removed unsupported versions (.NET MAUI 6 and 7) and Comet, as it is no longer being updated.
+
+For ease of work, the MAUI CommunityToolkit and Syncfusion MAUI Toolkit's XAML namespaces have been added to App.xaml file, if opted.
+
+Support for Nightly build configuration has been added for .NET MAUI 9 also.
+
+dotnet new mauiapp -o MyApp -ni
+
+Wherever applicable, .NET MAUI 9 constructs are applied, such as referencing the Window Page instead of the Application MainPage.
+
+v5.15.0:
+
 Introduced the option to add and configure the Syncfusion.Maui.Toolkit NuGet package.
 
 Note: This would be an explicit option.
