--- a/src/Extensions/MauiTemplates/MauiTemplates/release-notes.txt
+++ b/src/Extensions/MauiTemplates/MauiTemplates/release-notes.txt
@@ -1,9 +1,21 @@
 Join me on Developer Thoughts (https://egvijayanand.in/), an exclusive blog for articles on Xamarin.Forms, .NET MAUI and Blazor.
 
-This VS extension does not gather any usage or telemetry data, even anonymously, ensuring that you can use it freely and with complete privacy assurance.
+This VS extension does not gather any usage or telemetry data, even anonymously, ensuring that you can use it with complete privacy assurance.
 
-What's new in ver. 6.0.1.0:
+What's new in ver. 6.1.0.0:
 ---------------------------
+Introduced an option to create a new project template using HybridWebView.
+
+To know more about HybridWebView, consult this article https://egvijayanand.in/2024/10/04/exploring-dotnet-maui-9-hybridwebview-features/
+
+To facilitate this, within the Project Options page in the IDE, this Application Design option is available as a dropdown UI control. Select JSHybrid as its value.
+
+Since HybridWebView is a feature introduced in .NET MAUI 9, creating a .NET MAUI 8 App with this value of JSHybrid will NOT result in an error; instead, it will fall back by creating a App project that corresponds to the default Plain value.
+
+The Application Design option with the value Hybrid will continue to generate an App project using BlazorWebView, which works on both .NET MAUI 8 and 9, the present stable channel release.
+
+v6.0.1.0:
+
 Templates updated to support .NET MAUI 9 Stable channel release.
 
 The default value for the Framework parameter is now set to .NET 9.0 (STS).
