VS Extension updated to its corresponding CLI NuGet package

--- a/src/Extensions/MauiTemplates/MauiTemplates/release-notes.txt
+++ b/src/Extensions/MauiTemplates/MauiTemplates/release-notes.txt
@@ -2,8 +2,14 @@ Join me on Developer Thoughts (https://egvijayanand.in/), an exclusive blog for 
 
 This VS extension does not gather any usage or telemetry data, even anonymously, ensuring that you can use it with complete privacy assurance.
 
-What's new in ver. 7.0.1.0:
+What's new in ver. 7.1.0.0:
 ---------------------------
+The MauiVersion property value is updated to 9.0.50 to support the recent release of .NET MAUI 9 SR5 NuGet packages.
+
+Syncfusion.Maui.Toolkit NuGet package version updated to 1.0.4
+
+v7.0.1.0:
+
 Support for creating .NET MAUI projects on .NET 10 Previews.
 
 In the stable channel, the MauiVersion property value is updated to 9.0.40 to support the recent release of .NET MAUI 9 SR4 NuGet packages.
