Templates updated to support .NET 10 Preview 2 #297

--- a/src/MauiTemplatesCLI/release-notes.txt
+++ b/src/MauiTemplatesCLI/release-notes.txt
@@ -2,8 +2,12 @@ Join me on Developer Thoughts (https://egvijayanand.in/), an exclusive blog for 
 
 This template package does not gather any usage or telemetry data, even anonymously, ensuring that you can use it with complete privacy assurance.
 
-What's new in ver. 7.1.0:
+What's new in ver. 7.2.0:
 -------------------------
+Templates updated to support .NET 10 Preview 2.
+
+v7.1.0:
+
 The MauiVersion property value is updated to 9.0.50 to support the recent release of .NET MAUI 9 SR5 NuGet packages.
 
 Syncfusion.Maui.Toolkit NuGet package version updated to 1.0.4
