--- a/src/MauiTemplatesCLI/release-notes.txt
+++ b/src/MauiTemplatesCLI/release-notes.txt
@@ -2,9 +2,11 @@ Join me on Developer Thoughts (https://egvijayanand.in/), an exclusive blog for 
 
 This template package does not gather any usage or telemetry data, even anonymously, ensuring that you can use it with complete privacy assurance.
 
-What's new in ver. 7.3.0:
+What's new in ver. 7.3.1:
 -------------------------
 Templates updated to support .NET MAUI 10 Preview 3 and .NET MAUI 9 SR6.
+
+Android SDK version updated.
 
 v7.2.0:
 
